# EUV-cli

./: .gitignore  GUIDE.md  LICENSE  README.md  main.py  prompt.txt  pyproject.toml  response.txt
eco_sim/: __init__.py  __main__.py
euv/: __main__.py  ai.py  app.py  data.py  engine.py  model.py  render.py  save.py  worldgen.py
src/eco_sim/: __init__.py  __main__.py  main.py
src/eco_sim/ai/: __init__.py  controller.py  heuristics.py
src/eco_sim/content/: __init__.py  buildings.py  goods.py  scenarios.py
src/eco_sim/sim/: engine.py  state.py
src/eco_sim/sim/rules/: __init__.py  allocation.py  demand.py  pricing.py  recipes.py
src/eco_sim/sim/systems/: __init__.py  buildings.py  consumption.py  demand.py  finance.py  market.py  production.py  trade.py
src/eco_sim/tui/: app.py  commands.py  render.py  styles.tcss
src/eco_sim/util/: ids.py  math.py
tests/: run_all.sh  sim.py  test_attrition.py  test_peace.py  test_rebels.py  test_rivals.py  test_sim_core.py  test_vassals.py  tui_campaign.py  tui_driver.py  tui_fuzz.py  tui_war.py
